Fix dark mode logo

--- a/src/styles/_dark.scss
+++ b/src/styles/_dark.scss
@@ -11,7 +11,7 @@
     header {
         background-color: #1e1e1e;
 
-        a.logo h1 svg path {
+        a.logo svg path {
             fill: $accent;
         }
     }
